# Trajectory-Genration

./: CMakeLists.txt  README.md  package.xml
config/: traj_setup.yaml
include/traj_gen/: convert_tools.cpp  convert_tools.hpp  convert_traj_to_target.cpp  convert_traj_to_target.hpp  double_integral_planner.cpp  double_integral_planner.hpp  traj_gen.cpp  traj_gen.hpp  traj_gen_definition.hpp  wheel_vel_gen.cpp  wheel_vel_gen.hpp  yaml_read.cpp  yaml_read.hpp
launch/: traj_gen.launch
msg/: mode.msg
src/: traj_generator_node.cpp
